[tool.poetry]
name = "record-and-replay-proxy"
version = "0.1.0"
description = ""
authors = ["Chanmoro <kazuki.m777@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mitmproxy = "^4.0"
Flask = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
